--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
 clap = { version = "4.5.41", features = ["derive"] }
+headless_chrome = "1.0.17"
 liquid = "0.26.11"
+markdown-parser = "0.1.2"
+serde = { version = "1.0.219", features = ["derive"] }
+tempdir = "0.3.7"
 thiserror = "2.0.12"
+toml = "0.9.2"
